statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: myproject-statefulset
spec:
  replicas: 2
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: dbcont
          image: ponugotikavya/phapp:dbimage
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          volumeMounts:
            - name: myproject-pvc
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: myproject-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
